src/style/App.css
/* @import './semantic.css'; */

@font-face {
  font-family: 'Avenir Next';
  src: url('fonts/AvenirNext-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Avenir Next';
  src: url('fonts/AvenirNext-Medium.ttf') format('truetype'); 
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Avenir Next';
  src: url('fonts/AvenirNext-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

*, body {
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: grayscale;
  font-family: "Avenir Next", sans-serif !important;
}

@media only screen and (min-width: 768px) {
  .ui.container {
    width: 700px;
    max-width: 700px;
  }

nav.ui.container {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 11;
  background-color: white;
}

nav.ui.container .ui.header {
  float: left;
  margin-top: 12px;
}

}

@media only screen and (max-width: 991px) {
  #top-section  {
    padding-left: 4%;
    padding-right: 4%;
    /* CLARECHANGE */
    text-align: center;
  }

  #top-section .left-column {
    min-width: 400px;

  }

  #top-section .right-column {
    min-width: 350px;

  }

  #top-section .tile-segment {
    padding-left: 0;
    padding-right: 0;
  }


  #main-grid {
    margin: 0 auto;
    text-align: center;
    /* margin: auto; */
    position: relative;
    left: 0;
  }

  #top_tile {
    /* margin-left: 30%;
    margin-right: 30%; */
    margin: 0 auto;
  }

  #resume .section {
    width: 90% !important;
  }

  #about iframe {
    height: 250px !important;
  }


}

@media only screen and (max-width: 768px) {
  #carousel .carousel-container{
    display: none;
  }

  #carousel {
    min-height: 50px !important;
  }



  #carousel .carousel-container-mobile {
    display: none !important;
  }

  #carousel .buttonPanel {
    width: 100px !important;
    right: 50px !important;
    margin-left: 100px !important;
    color: #676767;
  }


  #about .segment {
    width: 80% !important;
  }

  #about h1 {
    margin: auto;
  }

  #about .box {
    margin: auto;
    padding: auto !important;
  }

  #nav-menu {
    display: none;
  }

  #nav-mobile {
    display: block !important;
    width: 100%;
    margin-top: 50px;
    /* text-align: center; */
  }

  #top-section {
    margin-top: 0 !important;
  }

  #top-section .segment-content {
    margin-top: 0 !important;
  }

  #Scrolling_tile {
    margin: auto;
    width: 90% !important;
  }

  #all_resumes .resume-segment {
    padding-left: 50px;
    padding-right: 50px;
  }


}


@media only screen and (max-width: 590px) {
  #carousel .buttonPanel {
    width: 100px !important;
    height: 50px !important;
    right: 200px !important;
    margin-left: 100px !important;
  }

}

.ui.inverted.vertical.center.aligned.segment {
  padding-top: 36px;
}

nav.ui.container .ui.inverted.compact.menu {
  background-color: rgb(51, 51, 51);
}

nav.ui.container .ui.inverted.compact.menu .item {
  padding-bottom: 0;
}

nav.ui.container .ui.inverted.compact.menu .item {
  font-size: 16px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 14px;
  margin-left: 16px;
  margin-right: 16px;
  border-radius: 0;
}

nav.ui.container .ui.inverted.compact.menu .active.item {
  background-color: inherit;
  border-bottom-color: white;
  border-bottom-style: solid;
  border-bottom-width: 2px;
}

#nav-menu {
  text-align: right;
  float: right;
  margin-top: 48px;
  padding-right: 12%;
}

#nav-menu .item {
  font-weight: 500;
}

#nav-mobile {
  display: none;
}

#nav-left {
  margin-left: 9%;
  margin-top: 40px;
}

.ui.inverted.vertical.segment {
  height: 100vh;
  background-color: rgb(51, 51, 51);
}

.ui.vertical.segment {
  padding-top: 36px;
  padding-left: 100px;
  padding-right: 100px;
  padding-bottom: 100px;
  min-height: 80vh;
}

.ui.content.container {
  height: 300px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.ui.content.container h1.header {
  font-size: 60px;
  color: rgb(51, 51, 51);
}

.ui.content.container h2.header {
  font-size: 32px;
  color: rgb(51, 51, 51);
  
}

.ui.content.container p {
  font-size: 20px;
  line-height: 1.6;
  font-weight: 300;
  
}

.ui.inverted.vertical.segment footer.ui.segment {
  height: 80px;
  width: 100%;
  position: absolute;
  bottom: 0;
  color: gray;
}

.ui.inverted.vertical.segment footer.ui.segment a {
  color: white;
}

#main-grid .left-column{
  /* position: relative;
  left: 60px; */
  /* CLARECHANGE */
  min-height: vh;
}

#top-section {
  padding-bottom: 0;
  /* height: 85vh; */
  min-height: 80vh;
  margin-top: 7em;
}

#top-section .main-header{

  font-style: normal;
  font-weight: 600;
  font-size: 44px;
  line-height: 60px;

color: #333333;
}

#top-section .main-content {

  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 36px;
  /* or 180% */
  color: #333333;
}



#top-section .container-content {
  width: 90%;
  min-height: 300px;
  /* overflow: scroll; */
  position: relative;

}

#top-section .segment-content {
  padding-left: 10px;
  padding-right: 10px;
  /* CLARECHANGE */
  margin-top: 200px;
}

#submit-button {

  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 36px;
  /* identical to box height, or 180% */
  color: #2F80ED;
  background-color: white;
  margin-left: 0;
  padding-left: 0;
}

/* #top_tile {
  position: relative;
  top: 100px;
  min-height: 583px;
} */

#top_tile .read_more{
  border: 2px solid #2F80ED;
  box-sizing: border-box;
  border-radius: 5px;
  font-style: normal;
  font-weight: bold;
  font-size: 15px;
  line-height: 30px;
/* identical to box height, or 200% */
  padding: 5px;
  padding-left: 24px;
  padding-right: 24px;
  text-align: center;
  /* margin-bottom: 20px; */
}

#top_tile .category {

  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 28px;
  /* or 156% */
  margin-left: 20px;

  color: #2F80ED;
}
/* ... */

